added new trending routes
