# src/routes/orderRoutes.js
@@ -6,17 +6,18 @@ const {
   cancelOrder,
   // makeOrderWithoutCart,
   addShippingAddress,
-  addbillingAddress
+  addbillingAddress,
+  viewAllOrders,
 } = require('../controllers/ordersControllers.js');
 
 //add cart to the orders : 
-router.post('/:id', authenticate, makeOrder);
 //add product to product without
 // router.post('/:id', authenticate, makeOrderWithoutCart);
 //cancel the order : 
 router.put('/cancel/:id', authenticate, cancelOrder);
-
+router.get('/myorders', authenticate, viewAllOrders);
 router.put('/shipaddress/:id', authenticate, addShippingAddress);
 router.put('/billaddress/:id', authenticate, addbillingAddress);
+router.post('/:id', authenticate, makeOrder);
 
 module.exports = router;
